Διόρθωσα το πρόβλημα που υπήρχε. Τώρα η UDP επικοινωνία δουλέυει σωστά και είναι έτοιμη